<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CalculatorFragment">

    <TextView
        android:id="@+id/calc_gender_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <Spinner
        android:id="@+id/calc_gender_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:entries="@array/genders"
        app:layout_constraintBottom_toBottomOf="@+id/calc_gender_tv"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/calc_gender_tv" />

    <TextView
        android:id="@+id/calc_weight_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/weight"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/calc_gender_tv" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/calc_weight_tv"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/calc_weight_tv">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/calc_weight_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/weight" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/calc_kg_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kg"
        app:layout_constraintBottom_toBottomOf="@+id/textInputLayout"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toTopOf="@+id/textInputLayout" />

    <TextView
        android:id="@+id/calc_height_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/height"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/calc_weight_tv" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutHeight"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/calc_height_tv"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/calc_height_tv">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/calc_height_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/height" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/calc_cm_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cm"
        app:layout_constraintBottom_toBottomOf="@+id/textInputLayoutHeight"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toTopOf="@+id/textInputLayoutHeight" />

    <TextView
        android:id="@+id/calc_age_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/age"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/calc_height_tv" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutAge"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/calc_age_tv"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/calc_age_tv">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/calc_age_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/age" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/calc_years_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/years"
        app:layout_constraintBottom_toBottomOf="@+id/textInputLayoutAge"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toTopOf="@+id/textInputLayoutAge" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="130dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

</androidx.constraintlayout.widget.ConstraintLayout>